--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1086,6 +1086,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Chi-Square Statistic**: Imagine you have a bunch of categories, like different types of fruit (apples, oranges, bananas, etc.), and you're comparing how many times each type appears in a dataset. The Chi-Square Statistic helps you figure out if the actual numbers you see (observed frequencies) are really different from what you'd expect to see just by chance (expected frequencies). *If the observed and expected numbers are exactly the same, the Chi-Square value is 0.0, meaning there's no difference between what you see and what you'd expect*.\n",
+    "\n",
+    "**p-value**: Now, let's say you calculated the *Chi-Square value and found it's not 0.0, which means there's some difference between observed and expected frequencies.* The p-value tells you if this difference is significant or just due to random chance. A p-value of 1.0 means there's a 100% chance that the difference you observed happened by random chance alone, so it's not significant. On the other hand, a very small p-value, like 0.05 or less, means the difference is unlikely to be due to chance and is probably real."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Example 3: use dataset `Gender's` columns"
    ]
   },
